objects/Requestor_Study_FeedBack__c.object
<CustomObject>
    <fields>
        <fullName>Anything_to_Share_with__c</fullName>
        <description>This is requester comments about study</description>
        <label>Anything to Share with us</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Did_the_technology_available_meetneeds__c</fullName>
        <label>Technology availableto meet Your needs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_you_get_the_insights_you_were_hoping__c</fullName>
        <label>Did you get the insights you were hoping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_your_recruiter_met_your_expectations__c</fullName>
        <label>Did your recruiter met your expectations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_not_why__c</fullName>
        <description>If recruiter Didn&apos;t get insights, reasons</description>
        <label>If not, why?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_Scale_1_to_10_Recommended_Score__c</fullName>
        <label>On Scale 1 to 10, Recommended Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Research_Participant__c</fullName>
        <label>Research Participant meet your Needs</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Studio_Space_Meet_Your_Needs__c</fullName>
        <label>Studio Space Meet Your Needs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study</label>
        <referenceTo>Study__c</referenceTo>
        <relationshipName>Requestor_Study_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>We_do_really__c</fullName>
        <label>We do in future to get a 9 or 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_did_we_do_well_can_different__c</fullName>
        <label>What did we do well &amp; can different</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_were_your_learnings_and_insights__c</fullName>
        <label>What were your learnings and insights?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>